plugins {
    id 'org.jetbrains.intellij' version '1.10.0'
    id 'java'
}

group 'com.joker'
version '1.0.6'

tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    options.encoding = 'UTF-8'
    options.warnings = false
}

repositories {
    maven { url 'https://plugins.gradle.org/m2/' }
    mavenCentral()
}

intellij {
    plugins = ['com.intellij.java']
    version = '2022.2'
    type = 'IU'
    downloadSources = true
    updateSinceUntilBuild = false
}

test {
    useJUnitPlatform()
}

dependencies {
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED', '-Dfile.encoding=utf-8'
}